--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -105,7 +105,6 @@ main {
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  max-width: 700px;
   padding: 0 35px;
   box-sizing: border-box;
 }
