--- a/src/css/randomGenerator/_results.scss
+++ b/src/css/randomGenerator/_results.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 6.2em;
+  max-width: 700px;
 
   p {
     width: 100%;
